KUBE/Eks/Ingress-Applications/app2-nginx-golang-mysql/k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: avejlanjekar45/nginx-golang-mysql-backend
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: db-password
              mountPath: /run/secrets/db-password
              subPath: db-password
      volumes:
        - name: db-password
          secret:
            secretName: app2-db-password
