KUBE/Eks/Ingress-Applications/app2-nginx-golang-mysql/k8s/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: app2
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mysql:8
          ports:
            - containerPort: 3306
