KUBE/Eks/Ingress-Applications/app2-nginx-golang-mysql/k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: avejlanjekar45/nginx-golang-mysql-frontend
          ports:
            - containerPort: 80
