KUBE/Eks/Ingress-Applications/app2-nginx-golang-mysql/k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app2
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
