KUBE/Eks/Ingress-Applications/app2-nginx-golang-mysql/k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: app2
spec:
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306
