KUBE/Eks/Ingress-Applications/app2-nginx-golang-mysql/k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: app2
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
